--- a/Exigences/rapport.html
+++ b/Exigences/rapport.html
@@ -52,7 +52,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>rima.boujenane@umontreal.ca
         <br />
-        <span style="font-weight: bold;">temps mis: </span>
+        <span style="font-weight: bold;">temps mis: </span> 10h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Cedric Guevremont
@@ -61,7 +61,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>cedric.guevremont@gmail.com
         <br />
-        <span style="font-weight: bold;">temps mis: </span>
+        <span style="font-weight: bold;">temps mis: </span> 7h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Dean Johan Bell
@@ -205,7 +205,7 @@
 
     <br><br>
     <h2>
-        Tâche 1</h2>
+        Tâche 1 : Glossaire</h2>
     <p> <b>Activité</b> : Ensemble de tâches organisées pour atteindre un objectif spécifique, souvent collaboratif.</p>
 
     <p> <b>Alerte</b> : Une notification qui se déclenche en cas d'erreur ou de problème détecté dans le fonctionnement
@@ -259,7 +259,7 @@
 
     <br><br>
     <h2>
-        Tâche 2</h2>
+        Tâche 2 : Diagramme de cas d'utilisation UML </h2>
     <p>
         Pour la deuxième tâche, nous avons convenu que le digramme suivant était approprié pour le cas présent.
     </p>
@@ -267,12 +267,12 @@
         <a href="https://github.com/rimaboujenane/Devoir1-2255/blob/main/brouillons/tache2/tache2-1.svg">Lien vers le
             diagramme github</a>
     </p>
-    <img src="brouillons/tache2/tache2-1.svg" alt="diagramme UML" />
+    <img src="tache2-1.svg" alt="diagramme UML" />
 
 
     <br><br>
     <h2>
-        Tâche 3</h2>
+        Tâche 3 : Cas d'utilisation</h2>
 
     <h3>Cas d'utilisation: 1 - S'inscrire comme utilisateur</h3>
     <p> <b>But</b>: Permettre à un nouvel utilisateur de s'enregistrer sur la plateforme Robotix. <br>
@@ -428,7 +428,7 @@
         <li>L'utilisateur reçoit ensuite une confirmation que le robot est prêt à être utilisé et peut maintenant être
             contrôlé via la plateforme.</li>
     </ol>
-    <b>Scénarios alternatifs </b> :<br><br>
+    <b>Scénarios alternatifs </b> :<br>
     <br>6a. L'utilisateur n'a pas tous les composants nécessaires en stock.
     <br>6a.1. Le système affiche un message demandant à l'utilisateur de commander les composants manquants.
     <br>6a.2. L'utilisateur passe une commande pour les composants manquants via la plateforme.
@@ -554,9 +554,10 @@
         <li>Les mouvements restent inutiles jusqu'au moment où ils sont chargés dans le CPU d'un robot qui possède la
             composante en question.</li>
     </ol>
-    <b>Scénarios alternatifs </b> : <br>
+    <b>Scénarios alternatifs </b> : <br><br>
     2a.1. L'utilisateur ne possède aucune composante. <br>
     2a.2. Il procède alors au cas d'utilisation 5 ou 6 pour acheter des composantes. <br>
+    <br>
     4a.1. L'utilisateur n'a pas encore contruit un robot pour charger avec les commandes qu'il a créées. <br>
     4a.2. Il doit passer avant au cas d'utilisation 4 pour en construire avec ces composantes. <br>
     <b>Postconditions </b> L'utilisateur a programmé un ou plusieurs mouvements qu'il peut assembler pour créer des
@@ -589,7 +590,7 @@
         <li>Similaires aux mouvements, les actions sont inutiles avant d'être chargées dans le CPU d'un robot qui
             possède toutes les composantes nécéssaires pour l'action.</li>
     </ol>
-    <b>Scénarios alternatifs </b> : <br>
+    <b>Scénarios alternatifs </b> : <br><br>
     4a.1. L'utilisateur ne peut pas charger l'action désirée parce que l'action inclu une composante que le robot cible
     ne possède pas.<br>
     4a.2. Il doit acheter la composante manquante (cas d'utilisation 5/6) pour que le robot soit compatible avec
@@ -616,9 +617,13 @@
         <li>L'utilisateur planifie la tâche pour une exécution immédiate ou à une date/heure spécifique.</li>
         <li>Le système enregistre la tâche et envoie les instructions au robot.</li>
     </ol>
-    <b>Scénarios alternatifs </b> : <br>
-    3a. Si aucun robot n'est disponible , le système affiche un message d'erreur.<br>
-    4a. Si les informations de planification sont invalides, le système demande de les corriger.<br>
+    <b>Scénarios alternatifs </b> : <br><br>
+    <br>3a. Aucun robot n'est disponible.
+    <br>3a.1. Le système affiche un message d'erreur et propose d'attendre ou de sélectionner un autre robot.<br>
+    <br>
+    <br>4a. Les informations de planification sont invalides.
+    <br>4a.1. Le système affiche un message d'erreur et demande à l'utilisateur de corriger les informations.
+    <br>
     <b>Postconditions </b> La tâche est créée, assignée et planifiée, prête à être exécutée par le robot.<br>
     </p>
 
@@ -639,14 +644,20 @@
             mémoire).</li>
     </ol>
     <b>Scénarios alternatifs </b> : <br>
-    2a. Si le système ne peut pas récupérer les données, le système affiche un message d'érreur<br>
+    <br>2a. Le système ne peut pas récupérer les données.
+    <br>2a.1. Le système affiche un message d'erreur et invite l'utilisateur à réessayer plus tard.
+    <br>
+    <br>5a. L'utilisateur souhaite voir plus de détails sur un robot spécifique.
+    <br>5a.1. L'utilisateur clique sur le robot souhaité.
+    <br>5a.2. Le système affiche une page détaillée contenant des informations approfondies sur le robot sélectionné.
+    <br>
     <b>Postconditions </b> L'utilisateur peut voir l'état actuel des robots.<br>
     </p>
 
     <br><br>
 
     <h2>
-        Tâche 4</h2>
+        Tâche 4 : Risques</h2>
 
     <p><b>Panne logicielle </b>: Il existe un risque que des erreurs de programmation ou des bugs dans le logiciel
         provoquent des dysfonctionnements dans les opérations des robots, affectant potentiellement leur performance et
@@ -669,7 +680,7 @@
     <br><br>
 
     <h2>
-        Tâche 5</h2>
+        Tâche 5 : Exigences non-fonctionnelles</h2>
     <p><b>Sécurité </b>: Le système doit garantir la confidentialité et l'intégrité des données des utilisateurs et des
         robots, en utilisant des techniques de chiffrement avancées et des méthodes d'authentification robustes pour
         prévenir les accès non autorisés. </p>
@@ -687,6 +698,12 @@
     <p><b>Maintenabilité </b>: Le système doit être structuré de manière modulaire pour faciliter les mises à jour et la
         correction des bugs, permettant des interventions efficaces et rapides, minimisant les interruptions de service
         et facilitant l’évolution constante du système en réponse aux besoins changeants. </p>
+
+        <br><br>
+    <h2>
+        Screenshot des statistiques sur GitHub :</h2>
+        <img src="screenshot des statistiques.png"style="height:500px;width:1200px; alt="Screenshot des statistiques sur GitHub" />
+
 
 </body>
 
