--- a/Exigences/rapport.html
+++ b/Exigences/rapport.html
@@ -703,6 +703,9 @@
     <h2>
         Screenshot des statistiques sur GitHub :</h2>
         <img src="screenshot des statistiques.png"style="height:500px;width:1200px; alt="Screenshot des statistiques sur GitHub" />
+        <p>
+        <img src="insigths.PNG" style="height:500px;width:1200px; alt="Screenhsot statistique Dean Bell"/>
+        </p>
 
 
 </body>
