--- a/Exigences/rapport.html
+++ b/Exigences/rapport.html
@@ -70,12 +70,12 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>dean.johan.bell@umontreal.ca
         <br />
-        <span style="font-weight: bold;">temps mis: </span>
+        <span style="font-weight: bold;">temps mis: </span>4h
     </p>
     <h2>
         Distribution des tâches</h2>
     <p>
-        <span style="font-weight: bold;">Soumissionaire: </span>Chomagique
+        <span style="font-weight: bold;">Soumissionaire: </span>Rima Boujenane
     </p>
     <table cellpadding="7px">
         <thead>
@@ -103,24 +103,24 @@
                     Glossaire
                 </td>
                 <td>
-                    Oui
-                </td>
-                <td>
                     25%
                 </td>
                 <td>
                     25%
                 </td>
                 <td>
-                    Oui
+                    25%
+                </td>
+                <td>
+                    25%
                 </td>
             </tr>
             <tr>
                 <td class="first_col">
-                    Diagrame de Cas d'Utilisation
+                    Diagramme de Cas d'Utilisation
                 </td>
                 <td>
-                    Oui
+                    5%
                 </td>
                 <td>
                     0%
@@ -129,7 +129,7 @@
                     75%
                 </td>
                 <td>
-                    Oui
+                    20%
                 </td>
             </tr>
             <tr>
@@ -154,7 +154,7 @@
                     Risques
                 </td>
                 <td>
-                    Oui
+                    0%
                 </td>
                 <td>
                     70%
@@ -163,15 +163,15 @@
                     0%
                 </td>
                 <td>
-                    Oui
+                    30%
                 </td>
             </tr>
             <tr>
                 <td class="first_col">
-                    Exigences Non-Foncionelles
+                    Exigences Non-Fonctionelles
                 </td>
                 <td>
-                    Oui
+                    0%
                 </td>
                 <td>
                     70%
@@ -180,7 +180,7 @@
                     0%
                 </td>
                 <td>
-                    Oui
+                    30%
                 </td>
             </tr>
             <tr>
@@ -188,7 +188,7 @@
                     Prototypage rapide
                 </td>
                 <td>
-                    Oui
+                    90%
                 </td>
                 <td>
                     0%
@@ -197,7 +197,7 @@
                     10%
                 </td>
                 <td>
-                    Non
+                    0%
                 </td>
             </tr>
         </tbody>
@@ -261,10 +261,10 @@
     <h2>
         Tâche 2 : Diagramme de cas d'utilisation UML </h2>
     <p>
-        Pour la deuxième tâche, nous avons convenu que le digramme suivant était approprié pour le cas présent.
+        Pour la deuxième tâche, nous avons convenu que le diagramme suivant était approprié pour le cas présent.
     </p>
     <p>
-        <a href="https://github.com/rimaboujenane/Devoir1-2255/blob/main/brouillons/tache2/tache2-1.svg">Lien vers le
+        <a href="https://github.com/rimaboujenane/Devoir1-2255/blob/main/Exigences/diagrammeCU.svg">Lien vers le
             diagramme github</a>
     </p>
     <img src="tache2-1.svg" alt="diagramme UML" />
@@ -703,9 +703,6 @@
     <h2>
         Screenshot des statistiques sur GitHub :</h2>
         <img src="screenshot des statistiques.png"style="height:500px;width:1200px; alt="Screenshot des statistiques sur GitHub" />
-        <p>
-        <img src="insigths.PNG" style="height:500px;width:1200px; alt="Screenhsot statistique Dean Bell"/>
-        </p>
 
 
 </body>
