--- a/Exigences/rapport.html
+++ b/Exigences/rapport.html
@@ -34,7 +34,6 @@
     </p>
     <p>
         <a href="https://github.com/rimaboujenane/Devoir1-2255">Lien vers dépôt GitHub</a><br>
-        <a href="example.vpp">Lien vers fichiers Visual Paradigm</a>
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>David Shorten
@@ -43,7 +42,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>david.shorten@umontreal.ca
         <br />
-        <span style="font-weight: bold;">temps mis: </span>
+        <span style="font-weight: bold;">Temps mis: </span>9h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Rima Boujenane
@@ -52,7 +51,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>rima.boujenane@umontreal.ca
         <br />
-        <span style="font-weight: bold;">temps mis: </span> 10h
+        <span style="font-weight: bold;">Temps mis: </span>10h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Cedric Guevremont
@@ -61,7 +60,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>cedric.guevremont@gmail.com
         <br />
-        <span style="font-weight: bold;">temps mis: </span> 7h
+        <span style="font-weight: bold;">Temps mis: </span>7h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Dean Johan Bell
@@ -70,7 +69,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>dean.johan.bell@umontreal.ca
         <br />
-        <span style="font-weight: bold;">temps mis: </span>4h
+        <span style="font-weight: bold;">Temps mis: </span>4h
     </p>
     <h2>
         Distribution des tâches</h2>
@@ -120,13 +119,13 @@
                     Diagramme de Cas d'Utilisation
                 </td>
                 <td>
-                    5%
+                    10%
                 </td>
                 <td>
                     0%
                 </td>
                 <td>
-                    75%
+                    70%
                 </td>
                 <td>
                     20%
