--- a/Exigences/rapport.html
+++ b/Exigences/rapport.html
@@ -266,7 +266,7 @@
         <a href="https://github.com/rimaboujenane/Devoir1-2255/blob/main/Exigences/diagrammeCU.svg">Lien vers le
             diagramme github</a>
     </p>
-    <img src="tache2-1.svg" alt="diagramme UML" />
+    <img src="diagrammeCU.svg" alt="diagramme UML" />
 
 
     <br><br>
