Modification rapport - distribution taches

--- a/Analyse/rapport.html
+++ b/Analyse/rapport.html
@@ -28,7 +28,7 @@
 
 <body>
     <h1 style="text-align: center;">
-        IFT 2255 - Été 2024- Devoir 1</h1>
+        IFT 2255 - Été 2024 - Devoir 2</h1>
     <h2>
         Information générale</h2>
     <p>
@@ -78,7 +78,7 @@
     <p>
         <span style="font-weight: bold;">Soumissionaire: </span> A determiner
     </p>
-    <table cellpadding="7px">
+    <table style="text-align: center;" cellpadding="7px">
         <thead>
             <tr>
                 <th class="first_col">
@@ -104,30 +104,30 @@
                     Analyse
                 </td>
                 <td>
-
+                    0%
                 </td>
                 <td>
-
+                    100%
                 </td>
                 <td>
-
+                    0%
                 </td>
                 <td>
-
+                    0%
                 </td>
             </tr>
             <tr>
                 <td class="first_col">
-                    Diagramme d'activités UML
+                    Diagrammes d'activités UML
                 </td>
                 <td>
 
                 </td>
                 <td>
-
+                    25% (Enregistrer un robot, S'inscrire à une activité)
                 </td>
                 <td>
-
+                    40% (Diagramme principal, Acheter un composant)
                 </td>
                 <td>
 
@@ -138,16 +138,16 @@
                     Diagramme de classes UML
                 </td>
                 <td>
-
+                    0%
                 </td>
                 <td>
-
+                    0%
                 </td>
                 <td>
-
+                    100%
                 </td>
                 <td>
-
+                    0%
                 </td>
             </tr>
             <tr>
@@ -158,7 +158,7 @@
 
                 </td>
                 <td>
-
+                    20% (Enregistrer un robot)
                 </td>
                 <td>
 
