--- a/Analyse/rapport.html
+++ b/Analyse/rapport.html
@@ -202,6 +202,10 @@
 
 
     <h2> Tâche 2 : Diagramme d'activités UML</h2>
+    <a href="DA.svg" target="_blank">
+        <img src="DA.svg" alt="Description de l'image SVG" width="1000" height="1000">
+    </a>
+
     <h2>Tâche 3 : Diagramme de classes UML</h2>
     <h2>Tâche 4 : Diagrammes de séquence UML</h2>
     <h2>Tâche 5 : Prototype</h2>
