--- a/Analyse/rapport.html
+++ b/Analyse/rapport.html
@@ -53,7 +53,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>rima.boujenane@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>
+        <span style="font-weight: bold;">Temps mis: </span>10h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Cedric Guevremont
@@ -62,7 +62,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>cedric.guevremont@gmail.com
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>
+        <span style="font-weight: bold;">Temps mis: </span>10h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Dean Johan Bell
@@ -76,7 +76,7 @@
     <h2>
         Distribution des tâches</h2>
     <p>
-        <span style="font-weight: bold;">Soumissionaire: </span> A determiner
+        <span style="font-weight: bold;">Soumissionaire: </span> Cedric Guevremont
     </p>
     <table style="text-align: center;" cellpadding="7px">
         <thead>
@@ -121,16 +121,16 @@
                     Diagrammes d'activités UML
                 </td>
                 <td>
-
+                    20% 
                 </td>
                 <td>
-                    25% (Enregistrer un robot, S'inscrire à une activité)
+                    20% 
                 </td>
                 <td>
-                    40% (Diagramme principal, Acheter un composant)
+                    40% 
                 </td>
                 <td>
-
+                    20% 
                 </td>
             </tr>
             <tr>
@@ -138,16 +138,16 @@
                     Diagramme de classes UML
                 </td>
                 <td>
-                    %
+                    15%
                 </td>
                 <td>
-                    %
+                    5%
                 </td>
                 <td>
-                    %
+                    70%
                 </td>
                 <td>
-                    %
+                    5%
                 </td>
             </tr>
             <tr>
@@ -155,16 +155,16 @@
                     Diagrammes de séquence UML
                 </td>
                 <td>
-
+                    20%
                 </td>
                 <td>
                     40%
                 </td>
                 <td>
-
+                    20%
                 </td>
                 <td>
-
+                    20%
                 </td>
             </tr>
             <tr>
@@ -172,16 +172,16 @@
                     Prototype
                 </td>
                 <td>
-                    %
+                   5%
                 </td>
                 <td>
-                    %
+                    5%
                 </td>
                 <td>
-                    %
+                    5%
                 </td>
                 <td>
-                    %
+                    85%
                 </td>
             </tr>
 
@@ -203,13 +203,49 @@
 
     <h2> Tâche 2 : Diagramme d'activités UML</h2>
     <a href="DA.svg" target="_blank">
-        <img src="DA.svg" alt="Description de l'image SVG" width="1300" height="900">
+        <img src="DA.svg" alt="Diagramme d'activité" width="1300" height="900">
     </a>
 
     <h2>Tâche 3 : Diagramme de classes UML</h2>
+    <a href="/../Conception/DC.svg" target="_blank">
+        <img src="/../Conception/DC.svg" alt="Diagramme de classe" width="1300" height="900">
+    </a>
+
     <h2>Tâche 4 : Diagrammes de séquence UML</h2>
+
+    <h3><u>Acheter une composante:</u></h3>
+    <a href="/../Conception/DS_AcheterComposante.svg" target="_blank">
+        <img src="/../Conception/DS_AcheterComposante.svg" alt="Diagramme de sequence" width="500" height="500">
+    </a>
+
+    <h3> <u>Ajouter/mettre à jour/supprimer une action:</u></h3>
+    <a href="/../Conception/DS_Action.svg" target="_blank">
+        <img src="/../Conception/DS_Action.svg" alt="Diagramme de sequence" width="500" height="500">
+    </a>
+
+    <h3><u>Enregistrer un robot:</u></h3>
+    <a href="/../Conception/DS_EnregistrerRobot.svg" target="_blank">
+        <img src="/../Conception/DS_EnregistrerRobot.svg" alt="Diagramme de sequence" width="500" height="500">
+    </a>
+
+    <h3><u>Inscription à une activité:</u></h3>
+    <a href="/../Conception/DS_InscriptionActivite.svg" target="_blank">
+        <img src="/../Conception/DS_InscriptionActivite.svg" alt="Diagramme de sequence" width="500" height="500">
+    </a>
+
+    <h3><u>Ajouter/mettre à jour/supprimer une tâch:</u></h3>
+    <a href="/../Conception/DS_Tache.svg" target="_blank">
+        <img src="/../Conception/DS_Tache.svg" alt="Diagramme de sequence" width="500" height="500">
+    </a>
+
+
     <h2>Tâche 5 : Prototype</h2>
+    <p>
+        <a href="https://github.com/rimaboujenane/Devoir1-2255">Lien vers dépôt GitHub</a><br>
+    </p>
 
 </body>
+
+
 
 </html>
