--- a/Analyse/rapport.html
+++ b/Analyse/rapport.html
@@ -71,7 +71,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>dean.johan.bell@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>
+        <span style="font-weight: bold;">Temps mis: </span>10h
     </p>
     <h2>
         Distribution des tâches</h2>
