--- a/Analyse/rapport.html
+++ b/Analyse/rapport.html
@@ -138,7 +138,7 @@
                     Diagramme de classes UML
                 </td>
                 <td>
-                    15%
+                    5%
                 </td>
                 <td>
                     5%
@@ -147,7 +147,7 @@
                     70%
                 </td>
                 <td>
-                    5%
+                    15%
                 </td>
             </tr>
             <tr>
@@ -172,7 +172,7 @@
                     Prototype
                 </td>
                 <td>
-                   5%
+                   85%
                 </td>
                 <td>
                     5%
@@ -181,7 +181,7 @@
                     5%
                 </td>
                 <td>
-                    85%
+                    5%
                 </td>
             </tr>
 
@@ -207,35 +207,35 @@
     </a>
 
     <h2>Tâche 3 : Diagramme de classes UML</h2>
-    <a href="/../Conception/DC.svg" target="_blank">
-        <img src="/../Conception/DC.svg" alt="Diagramme de classe" width="1300" height="900">
+    <a href="../Conception/DC.svg" target="_blank">
+        <img src="../Conception/DC.svg" alt="Diagramme de classe" width="1300" height="900">
     </a>
 
     <h2>Tâche 4 : Diagrammes de séquence UML</h2>
 
     <h3><u>Acheter une composante:</u></h3>
-    <a href="/../Conception/DS_AcheterComposante.svg" target="_blank">
-        <img src="/../Conception/DS_AcheterComposante.svg" alt="Diagramme de sequence" width="500" height="500">
+    <a href="../Conception/DS_AcheterComposante.svg" target="_blank">
+        <img src="../Conception/DS_AcheterComposante.svg" alt="Diagramme de sequence" width="500" height="500">
     </a>
 
     <h3> <u>Ajouter/mettre à jour/supprimer une action:</u></h3>
-    <a href="/../Conception/DS_Action.svg" target="_blank">
-        <img src="/../Conception/DS_Action.svg" alt="Diagramme de sequence" width="500" height="500">
+    <a href="../Conception/DS_Action.svg" target="_blank">
+        <img src="../Conception/DS_Action.svg" alt="Diagramme de sequence" width="500" height="500">
     </a>
 
     <h3><u>Enregistrer un robot:</u></h3>
-    <a href="/../Conception/DS_EnregistrerRobot.svg" target="_blank">
-        <img src="/../Conception/DS_EnregistrerRobot.svg" alt="Diagramme de sequence" width="500" height="500">
+    <a href="../Conception/DS_EnregistrerRobot.svg" target="_blank">
+        <img src="../Conception/DS_EnregistrerRobot.svg" alt="Diagramme de sequence" width="500" height="500">
     </a>
 
     <h3><u>Inscription à une activité:</u></h3>
-    <a href="/../Conception/DS_InscriptionActivite.svg" target="_blank">
-        <img src="/../Conception/DS_InscriptionActivite.svg" alt="Diagramme de sequence" width="500" height="500">
+    <a href="../Conception/DS_InscriptionActivite.svg" target="_blank">
+        <img src="../Conception/DS_InscriptionActivite.svg" alt="Diagramme de sequence" width="500" height="500">
     </a>
 
     <h3><u>Ajouter/mettre à jour/supprimer une tâch:</u></h3>
-    <a href="/../Conception/DS_Tache.svg" target="_blank">
-        <img src="/../Conception/DS_Tache.svg" alt="Diagramme de sequence" width="500" height="500">
+    <a href="../Conception/DS_Tache.svg" target="_blank">
+        <img src="../Conception/DS_Tache.svg" alt="Diagramme de sequence" width="500" height="500">
     </a>
 
 
