--- a/Analyse/rapport.html
+++ b/Analyse/rapport.html
@@ -188,6 +188,9 @@
         </tbody>
     </table>
 
+    <h2> Hypothèse:</h2>
+    <p> On supposera que les termes 'opération' et 'action' signifient la même chose dans le prototype.</p>
+
     <h2> Tâche 1 : Analyse</h2>
     <p>Pour mettre en opération le système Robotix, les opérations principales seront informatisées, incluant
         l'inscription et l'authentification des utilisateurs et fournisseurs, la gestion des robots, des tâches, des
@@ -243,6 +246,11 @@
     <p>
         <a href="https://github.com/rimaboujenane/Devoir1-2255">Lien vers dépôt GitHub</a><br>
     </p>
+
+    <h2>Contribution:</h2>
+    <img src="stat1.png"style="height:50%;width:50%; alt="Screenshot des statistiques sur GitHub" />
+    <img src="stat2.png"style="height:50%;width:50%; alt="Screenshot des statistiques sur GitHub" />
+
 
 </body>
 
