Mise a jour de rapport

--- a/Analyse/rapport.html
+++ b/Analyse/rapport.html
@@ -44,7 +44,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>david.shorten@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>
+        <span style="font-weight: bold;">Temps mis: </span>10h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Rima Boujenane
