--- a/rapport.html
+++ b/rapport.html
@@ -214,46 +214,46 @@
 
     <h2><u>Diagramme de cas d'utilisation UML </u></h2>
     <p>Pour la deuxième tâche, nous avons convenu que le diagramme suivant était approprié pour le cas présent.</p>
-    <a href="../Exigences/diagrammeCU.svg" target="_blank">
-    <img src="../Exigences/diagrammeCU.svg" alt="Diagramme de cas d'utilisation" /> </a>
+    <a href="../2255/Exigences/diagrammeCU.svg" target="_blank">
+    <img src="../2255/Exigences/diagrammeCU.svg" alt="Diagramme de cas d'utilisation" width="700" height="700"/> </a>
 
     <h2><u>Diagramme d'activités UML</u></h2>
-    <a href="..Analyse/DA.svg" target="_blank">
-        <img src="../Analyse/DA.svg" alt="Diagramme d'activité" width="1300" height="900">
+    <a href="../2255/Analyse/DA.svg" target="_blank">
+        <img src="../2255/Analyse/DA.svg" alt="Diagramme d'activité" width="1300" height="900">
     </a><br><br>
 
 
     <h1><u>Conception révisée:</u></h1>
     <h2><u>Diagramme de classes UML</u></h2>
-    <a href="../Conception/DC.svg" target="_blank">
-        <img src="../Conception/DC.svg" alt="Diagramme de classe" width="1300" height="900">
+    <a href="../2255/Conception/DC.svg" target="_blank">
+        <img src="../2255/Conception/DC.svg" alt="Diagramme de classe" width="1300" height="900">
     </a>
 
     <h2><u>Diagrammes de séquence UML</u></h2>
 
     <h3><u>Acheter une composante:</u></h3>
-    <a href="../Conception/DS_AcheterComposante.svg" target="_blank">
-        <img src="../Conception/DS_AcheterComposante.svg" alt="Diagramme de sequence" width="500" height="500">
+    <a href="../2255/Conception/dev3_DS_AcheterComposant.svg" target="_blank">
+        <img src="../2255/Conception/dev3_DS_AcheterComposant.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
-    <h3> <u>Ajouter/mettre à jour/supprimer une action:</u></h3>
-    <a href="../Conception/DS_Action.svg" target="_blank">
-        <img src="../Conception/DS_Action.svg" alt="Diagramme de sequence" width="500" height="500">
+    <h3> <u>Enregistrer une composante:</u></h3>
+    <a href="../2255/Conception/dev3_DS_EnregistrerComp.svg" target="_blank">
+        <img src="../2255/Conception/dev3_DS_EnregistrerComp.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
-    <h3><u>Enregistrer un robot:</u></h3>
-    <a href="../Conception/DS_EnregistrerRobot.svg" target="_blank">
-        <img src="../Conception/DS_EnregistrerRobot.svg" alt="Diagramme de sequence" width="500" height="500">
+    <h3><u>Ajouter un robot:</u></h3>
+    <a href="../2255/Conception/dev3_DS_AjouterRobot.svg" target="_blank">
+        <img src="../2255/Conception/dev3_DS_AjouterRobot.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
     <h3><u>Inscription à une activité:</u></h3>
-    <a href="../Conception/DS_InscriptionActivite.svg" target="_blank">
-        <img src="../Conception/DS_InscriptionActivite.svg" alt="Diagramme de sequence" width="500" height="500">
+    <a href="../2255/Conception/dev3_DS_InscriptionActivite.svg" target="_blank">
+        <img src="../2255/Conception/dev3_DS_InscriptionActivite.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
-    <h3><u>Ajouter/mettre à jour/supprimer une tâche:</u></h3>
-    <a href="../Conception/DS_Tache.svg" target="_blank">
-        <img src="../Conception/DS_Tache.svg" alt="Diagramme de sequence" width="500" height="500">
+    <h3><u>Modifier son profil:</u></h3>
+    <a href="../2255/Conception/dev3_DS_ModifProfil.svg" target="_blank">
+        <img src="../2255/Conception/dev3_DS_ModifProfil.svg" alt="Diagramme de sequence" width="800" height="500">
     </a><br><br><br>
 
 
