--- a/rapport.html
+++ b/rapport.html
@@ -277,11 +277,8 @@
 
 
 
-    <h1><u>Application:</u></h1>
-    <h2>Lien vers l'application:</h2>
-    <p>[...]</p>
-    <h2>Lien vers la documentation:</h2>
-    <a href="https://github.com/rimaboujenane/Devoir-2255/tree/main/Impl%C3%A9mentation/Robotix/doc">Lien vers le fichier de documentation</a><br>
+    <h1><u>Application: Lien vers le jar:</u></h1>
+   <a href= "https://github.com/rimaboujenane/Devoir-2255/blob/main/Impl%C3%A9mentation/Robotix/out/artifacts/Robotix_jar/Robotix.jar">Lien vers le jar</a>
 
     <h1><u>Tests:</u></h1>
     <h2>Bilan des tests:</h2>
