--- a/rapport.html
+++ b/rapport.html
@@ -282,6 +282,9 @@
 
     <h1><u>Tests:</u></h1>
     <h2>Bilan des tests:</h2>
+    <a href="../Devoir-2255/bilan.png" target="_blank">
+        <img src="../Devoir-2255/bilan.png" alt="Test" width="800" height="500">
+    </a>
 
 
     <h1><u>Contribution:</u></h1>
