--- a/rapport.html
+++ b/rapport.html
@@ -44,7 +44,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>david.shorten@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 10h</span>h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Rima Boujenane
@@ -53,7 +53,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>rima.boujenane@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 20h</span>h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Cedric Guevremont
@@ -62,7 +62,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>cedric.guevremont@gmail.com
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 20h </span>h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Dean Johan Bell
@@ -71,7 +71,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>dean.johan.bell@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 10h</span>h
     </p>
     <h2>
         Distribution des tâches</h2>
