--- a/rapport.html
+++ b/rapport.html
@@ -44,7 +44,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>david.shorten@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 10h</span>h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Rima Boujenane
@@ -53,7 +53,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>rima.boujenane@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 20h</span>h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Cedric Guevremont
@@ -62,7 +62,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>cedric.guevremont@gmail.com
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 20h </span>h
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Dean Johan Bell
@@ -71,7 +71,7 @@
         <br />
         <span style="font-weight: bold;">Courriel: </span>dean.johan.bell@umontreal.ca
         <br />
-        <span style="font-weight: bold;">Temps mis: </span>h
+        <span style="font-weight: bold;">Temps mis: 10h</span>h
     </p>
     <h2>
         Distribution des tâches</h2>
@@ -277,19 +277,19 @@
 
 
 
-    <h1><u>Application:</u></h1>
-    <h2>Lien vers l'application:</h2>
-    <p>[...]</p>
-    <h2>Lien vers la documentation:</h2>
-    <a href="https://github.com/rimaboujenane/Devoir-2255/tree/main/Impl%C3%A9mentation/Robotix/doc">Lien vers le fichier de documentation</a><br>
+    <h1><u>Application: Lien vers le jar:</u></h1>
+   <a href= "https://github.com/rimaboujenane/Devoir-2255/blob/main/Impl%C3%A9mentation/Robotix/out/artifacts/Robotix_jar/Robotix.jar">Lien vers le jar</a>
 
     <h1><u>Tests:</u></h1>
     <h2>Bilan des tests:</h2>
+    <a href="bilan.png" target="_blank">
+        <img src="bilan.png" alt="Test" width="800" height="500">
+    </a>
 
 
     <h1><u>Contribution:</u></h1>
-    <a href="../Devoir-2255/dev3_stats.png" target="_blank">
-        <img src="../Devoir-2255/dev3_stats.png" alt="Contribution" width="800" height="500">
+    <a href="dev3_stats.png" target="_blank">
+        <img src="dev3_stats.png" alt="Contribution" width="800" height="500">
     </a>
     
 
