--- a/rapport.html
+++ b/rapport.html
@@ -121,13 +121,13 @@
                     Implémentation en Java
                 </td>
                 <td>
-                    15%
+                    10%
                 </td>
                 <td>30%
                 </td>
                 <td>40%
                 </td>
-                <td> 15%
+                <td> 20%
                 </td>
             </tr>
             <tr>
@@ -251,28 +251,28 @@
     <h2><u>Diagrammes de séquence UML</u></h2>
 
     <h3><u>Acheter une composante:</u></h3>
-    <a href="../Devoir-2255/Conception/dev3_DS_AcheterComposant.svg" target="_blank">
-        <img src="../Devoir-2255/Conception/dev3_DS_AcheterComposant.svg" alt="Diagramme de sequence" width="800" height="500">
+    <a href="Conception/dev3_DS_AcheterComposant.svg" target="_blank">
+        <img src="Conception/dev3_DS_AcheterComposant.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
     <h3> <u>Enregistrer une composante:</u></h3>
-    <a href="../Devoir-2255/Conception/dev3_DS_EnregistrerComp.svg" target="_blank">
-        <img src="../Devoir-2255/Conception/dev3_DS_EnregistrerComp.svg" alt="Diagramme de sequence" width="800" height="500">
+    <a href="Conception/dev3_DS_EnregistrerComp.svg" target="_blank">
+        <img src="Conception/dev3_DS_EnregistrerComp.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
     <h3><u>Ajouter un robot:</u></h3>
-    <a href="../Devoir-2255/Conception/dev3_DS_AjouterRobot.svg" target="_blank">
-        <img src="../Devoir-2255/Conception/dev3_DS_AjouterRobot.svg" alt="Diagramme de sequence" width="800" height="500">
+    <a href="Conception/dev3_DS_AjouterRobot.svg" target="_blank">
+        <img src="Conception/dev3_DS_AjouterRobot.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
     <h3><u>Inscription à une activité:</u></h3>
-    <a href="../Devoir-2255/Conception/dev3_DS_InscriptionActivite.svg" target="_blank">
-        <img src="../Devoir-2255/Conception/dev3_DS_InscriptionActivite.svg" alt="Diagramme de sequence" width="800" height="500">
+    <a href="Conception/dev3_DS_InscriptionActivite.svg" target="_blank">
+        <img src="Conception/dev3_DS_InscriptionActivite.svg" alt="Diagramme de sequence" width="800" height="500">
     </a>
 
     <h3><u>Modifier son profil:</u></h3>
-    <a href="../Devoir-2255/Conception/dev3_DS_ModifProfil.svg" target="_blank">
-        <img src="../Devoir-2255/Conception/dev3_DS_ModifProfil.svg" alt="Diagramme de sequence" width="800" height="500">
+    <a href="Conception/dev3_DS_ModifProfil.svg" target="_blank">
+        <img src="Conception/dev3_DS_ModifProfil.svg" alt="Diagramme de sequence" width="800" height="500">
     </a><br><br><br>
 
 
