--- a/rapport.html
+++ b/rapport.html
@@ -233,19 +233,19 @@
 
     <h2><u>Diagramme de cas d'utilisation UML </u></h2>
     <p>Pour la deuxième tâche, nous avons convenu que le diagramme suivant était approprié pour le cas présent.</p>
-    <a href="../Devoir-2255/Exigences/diagrammeCU.svg" target="_blank">
-    <img src="../Devoir-2255/Exigences/diagrammeCU.svg" alt="Diagramme de cas d'utilisation" width="700" height="700"/> </a>
+    <a href="Exigences/diagrammeCU.svg" target="_blank">
+    <img src="Exigences/diagrammeCU.svg" alt="Diagramme de cas d'utilisation" width="700" height="700"/> </a>
 
     <h2><u>Diagramme d'activités UML</u></h2>
-    <a href="../Devoir-2255/Analyse/DA.svg" target="_blank">
-        <img src="../Devoir-2255/Analyse/DA.svg" alt="Diagramme d'activité" width="1300" height="900">
+    <a href="Analyse/DA.svg" target="_blank">
+        <img src="Analyse/DA.svg" alt="Diagramme d'activité" width="1300" height="900">
     </a><br><br>
 
 
     <h1><u>Conception révisée:</u></h1>
     <h2><u>Diagramme de classes UML</u></h2>
-    <a href="../Devoir-2255/Conception/DC_devoir3.svg" target="_blank">
-        <img src="../Devoir-2255/Conception/DC_devoir3.svg" alt="Diagramme de classe" width="1300" height="900">
+    <a href="Conception/DC_devoir3.svg" target="_blank">
+        <img src="Conception/DC_devoir3.svg" alt="Diagramme de classe" width="1300" height="900">
     </a>
 
     <h2><u>Diagrammes de séquence UML</u></h2>
