--- a/rapport.html
+++ b/rapport.html
@@ -276,6 +276,10 @@
     </a><br><br><br>
 
 
+    <h1><u>Lien vers la documentation:</u></h1>
+   <a href= "https://github.com/rimaboujenane/Devoir-2255/tree/main/Impl%C3%A9mentation/Robotix/doc">Lien vers la doc</a>
+
+https://github.com/rimaboujenane/Devoir-2255/tree/main/Impl%C3%A9mentation/Robotix/doc
 
     <h1><u>Application: Lien vers le jar:</u></h1>
    <a href= "https://github.com/rimaboujenane/Devoir-2255/blob/main/Impl%C3%A9mentation/Robotix/out/artifacts/Robotix_jar/Robotix.jar">Lien vers le jar</a>
